--- a/.github/workflows/lint_test.yml
+++ b/.github/workflows/lint_test.yml
@@ -5,7 +5,7 @@ name: Lint and Test
 on: [push, pull_request]
 
 jobs:
-  lint_and_test:
+  suite:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
