--- a/Pipfile
+++ b/Pipfile
@@ -21,3 +21,4 @@ python_version = "3.9"
 [scripts]
 start = "python3 -m flask run"
 clearport = "kill $(lsof -t -i:5000)"
+lint = "pipenv run black ."
