--- a/.github/workflows/lint_test.yml
+++ b/.github/workflows/lint_test.yml
@@ -14,10 +14,20 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.9
-
-      - name: Install dependencies with pipenv
+      
+      - name: Install pipenv
         run: |
-          pip install pipenv
+          python -m pip install --upgrade pipenv wheel
+
+      - id: cache-pipenv
+        uses: actions/cache@v1
+        with:
+          path: ~/.local/share/virtualenvs
+          key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
+
+      - name: Install dependencies
+        if: steps.cache-pipenv.outputs.cache-hit != 'true'
+        run: |
           pipenv install --deploy --dev
 
       - name: Run Black 
