--- a/.pylintrc
+++ b/.pylintrc
@@ -82,7 +82,10 @@ disable=raw-checker-failed,
         useless-suppression,
         deprecated-pragma,
         use-symbolic-message-instead,
-        no-member
+        no-member,
+        too-few-public-methods,
+        duplicate-code,
+        broad-except
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
